fix the problem with horizontal scroll

--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -7,7 +7,4 @@
   &__main {
     margin: 0 auto 106px;
   }
-  &__footer {
-    margin: 0 auto;
-  }
 }
