--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,6 @@
 
 .footer {
-  width: 100vw;
+  max-width: 100vw;
   &__background-wrapper {
     margin-top: 88px;
     position: relative;
